--- a/ansible/templates/logrotate_config_nginx.j2
+++ b/ansible/templates/logrotate_config_nginx.j2
@@ -9,6 +9,6 @@
     create 0640 squid squid
     sharedscripts
     postrotate
-    /bin/kill -USR1 `cat /opt/nginx/logs/nginx.pid  2>/dev/null` 2>/dev/null || true
+    /bin/kill -USR1 `cat {{ nginx_path }}/logs/nginx.pid  2>/dev/null` 2>/dev/null || true
     endscript
 }
