--- a/ansible/templates/logrotate_config_squid.j2
+++ b/ansible/templates/logrotate_config_squid.j2
@@ -2,7 +2,7 @@
 {{ cache_log_path }}
 {{ access_tianji_blacklist_log_path }} {
     su squid squid
-##    daily
+    daily
     dateext
     dateformat -%Y%m%d
     rotate 7
