--- a/ansible/templates/opp-crontab.j2
+++ b/ansible/templates/opp-crontab.j2
@@ -11,7 +11,7 @@
 #5 0 * * * /usr/sbin/logrotate -f /etc/logrotate.d/squid &>> /opt/squid_shell/logs/logrotate.log
 #30 0 * * * /usr/sbin/logrotate -f /etc/logrotate.d/nginx
 #45 0 * * * /usr/sbin/logrotate -f /etc/logrotate.d/python_prod_logs
-5 0 * * * /usr/sbin/logrotate -s /opt/logrotate/status/logrotate.status -f /opt/logrotate/etc/squid &>> /opt/squid_shell/logs/logrotate.log
+5 0 * * * sudo /opt/logrotate/etc/squid /root/logrotate-squid;sudo /usr/sbin/logrotate -s /opt/logrotate/status/logrotate.status -f /root/logrotate-squid &>> /opt/squid_shell/logs/logrotate.log
 30 0 * * * /usr/sbin/logrotate -s /opt/logrotate/status/logrotate.status -f /opt/logrotate/etc/nginx &>> /opt/squid_shell/logs/logrotate.log
 45 0 * * * /usr/sbin/logrotate -s /opt/logrotate/status/logrotate.status -f /opt/logrotate/etc/python_prod_logs &>> /opt/squid_shell/logs/logrotate.log
 0 1 * * * /usr/bin/curl -k https://127.0.0.1:8000/api/logs_del  &>> /opt/squid_shell/logs/php_logs_del.log
