--- a/ansible/templates/sudo-logreader.j2
+++ b/ansible/templates/sudo-logreader.j2
@@ -1,5 +1,5 @@
 # Allows logreader user to sudo without password
-Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
+11Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
                                 /usr/bin/systemctl * squid, \
                                 /usr/bin/systemctl * redis, \
                                 /usr/bin/systemctl * php-fpm, \
