--- a/ansible/templates/sudo-logreader.j2
+++ b/ansible/templates/sudo-logreader.j2
@@ -1,5 +1,5 @@
-# Allows logreader user to sudo without password
-11Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
+# Allows logreader user to sudo cmd list without password
+Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
                                 /usr/bin/systemctl * squid, \
                                 /usr/bin/systemctl * redis, \
                                 /usr/bin/systemctl * php-fpm, \
