--- a/ansible/templates/sudoer-opp.j2
+++ b/ansible/templates/sudoer-opp.j2
@@ -8,3 +8,9 @@ Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
                                 /usr/bin/cp /opt/logrotate/etc/squid /root/logrotate-squid, \
                                 /usr/sbin/logrotate *
 logreader ALL=(root) NOPASSWD: LOGREADER_SUDO_CMD
+
+# Allows nginx user to sudo cmd list without password
+Cmnd_Alias NGINX_SUDO_CMD = /usr/bin/python3 /opt/py_prod/squid_ldap_modify.py, \
+                            /usr/bin/python3 /opt/py_prod/squid_kerberos_modify.py, \
+                            /opt/squid/sbin/squid -k reconfigure
+nginx ALL=(root) NOPASSWD: NGINX_SUDO_CMD
