--- a/ansible/templates/sudoer-opp.j2
+++ b/ansible/templates/sudoer-opp.j2
@@ -6,7 +6,8 @@ Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
                                 /usr/bin/systemctl * laravel-queue, \
                                 /usr/bin/systemctl * node_exporter, \
                                 /usr/bin/cp /opt/logrotate/etc/squid /root/logrotate-squid, \
-                                /usr/sbin/logrotate *
+                                /usr/sbin/logrotate * \
+								/opt/squid/sbin/squid -k reconfigure
 logreader ALL=(root) NOPASSWD: LOGREADER_SUDO_CMD
 
 # Allows nginx user to sudo cmd list without password
