--- a/ansible/templates/sudoer-opp.j2
+++ b/ansible/templates/sudoer-opp.j2
@@ -12,6 +12,8 @@ Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
 logreader ALL=(root) NOPASSWD: LOGREADER_SUDO_CMD
 
 # Allows nginx user to sudo cmd list without password
+Defaults:nginx !requiretty
+
 Cmnd_Alias NGINX_SUDO_CMD = /usr/bin/python3 /opt/py_prod/squid_ldap_modify.py, \
                             /usr/bin/python3 /opt/py_prod/squid_kerberos_modify.py, \
                             /opt/squid/sbin/squid -k reconfigure
