--- a/ansible/templates/sudoer-opp.j2
+++ b/ansible/templates/sudoer-opp.j2
@@ -16,5 +16,6 @@ Defaults:nginx !requiretty
 
 Cmnd_Alias NGINX_SUDO_CMD = /usr/bin/python3 /opt/py_prod/squid_ldap_modify.py, \
                             /usr/bin/python3 /opt/py_prod/squid_kerberos_modify.py, \
-                            /opt/squid/sbin/squid -k reconfigure
+                            /opt/squid/sbin/squid -k reconfigure, \
+                            /opt/squid/sbin/squid -k reconfigure *
 nginx ALL=(root) NOPASSWD: NGINX_SUDO_CMD
