--- a/ansible/templates/sudoer-opp.j2
+++ b/ansible/templates/sudoer-opp.j2
@@ -9,7 +9,11 @@ Cmnd_Alias LOGREADER_SUDO_CMD = /usr/bin/systemctl * nginx, \
                                 /usr/bin/cp /opt/logrotate/etc/squid /root/logrotate-squid, \
                                 /usr/sbin/logrotate *, \
                                 /opt/squid/sbin/squid -k reconfigure, \
-                                /usr/bin/php *
+                                /usr/bin/php * \
+                                /usr/bin/cp -f /opt/redis_bak/dump.rdb_release* /opt/redis/dump.rdb, \
+                                /usr/bin/rm -f /opt/redis/dump.rdb, \
+								/usr/bin/chown -R redis.redis /opt/redis/dump.rdb
+
 logreader ALL=(root) NOPASSWD: LOGREADER_SUDO_CMD
 logreader ALL=(nginx) NOPASSWD: ALL
 logreader ALL=(redis) NOPASSWD: ALL
